--- a/mythesis.tex
+++ b/mythesis.tex
@@ -86,13 +86,23 @@
 \newcommand{\der}{\mbox{d}}
 %
 \begin{document}
+
+%\title{Gradu}
+%\opinnayte{Pro Gradu}
+%\author{Fil. yo. Tuomo Salmi}
+%\vuosi{2004}
+%\oppiaine{Fysiikka}
+%\tarkastaja{P.P.}
+%\tarkastaja{H.H.}
+
 \title{Gradu}
-\opinnayte{Pro Gradu}
-\author{Fil. yo. Tuomo Salmi}
-\vuosi{2004}
-\oppiaine{Fysiikka}
-\tarkastaja{P.P.}
-\tarkastaja{H.H.}
+\opinnayte{Master Thesis}
+\author{Tuomo Salmi}
+\vuosi{2016}
+\oppiaine{Astronomy}
+\tarkastaja{J.P.}
+\tarkastaja{J.N.}
+
 \maketitle
 \newpage
 \thispagestyle{empty}
@@ -100,23 +110,41 @@
 
 \vfill
 
-\hspace*{-2cm}\parbox{\textwidth}{Turun yliopiston laatujärjestelmän mukaisesti
-  tämän julkaisun alkuperäisyys on tarkastettu Turnitin
-  OriginalityCheck-järjestelmällä} 
+%\hspace*{-2cm}\parbox{\textwidth}{Turun yliopiston laatujärjestelmän mukaisesti
+%  tämän julkaisun alkuperäisyys on tarkastettu Turnitin
+%  OriginalityCheck-järjestelmällä} 
+  
+\hspace*{-2cm}\parbox{\textwidth}{The originality of this thesis has been checked in accordance with the University of Turku quality assurance system using the Turnitin Originality check}
+  
 %Huomaa, että joudut kuitenkin printtaamaan tämän sivun erikseen
 %kaksipuoleseksi kannen kanssa.
 
 
 \newpage
+
+%\begin{tiivistelma}%
+%        {Fysiikan laitos}%
+%        {Salmi, Tuomo}%
+%        {Tutkielman otsikko}
+%        {Pro Gradu, \pageref{LastPage} s., 3 liites.}%
+%        {Fysiikka}% Oppiaine
+%        {Huhtikuu 2004}%
+%	Tiivistä tähän !
+%\end{tiivistelma}
+
 \begin{tiivistelma}%
-        {Fysiikan laitos}%
+        {Department of Physics and Astronomy}%
         {Salmi, Tuomo}%
-        {Tutkielman otsikko}
-        {Pro Gradu, \pageref{LastPage} s., 3 liites.}%
-        {Fysiikka}% Oppiaine
-        {Huhtikuu 2004}%
-	Tiivistä tähän !
+        {Gradu}
+        {Master's thesis, \pageref{LastPage} s., 3 Appendices}%
+        {Astronomy}% Oppiaine
+        {September 2016}%
+	Write here!
 \end{tiivistelma}
+
+
+
+
 \tableofcontents %Sisällysluettelo
 \newpage
 \section*{Introduction}
@@ -727,11 +755,14 @@ For a large spot (angular radius $\sim$30 deg),
 at least a few tens points in total are needed if one wants to achieve accuracy of the order of 1\%. 
 
 
-\subsubsection{Comparsion of the profiles}
+\subsubsection{Comparison of the profiles}
 
 
 
 \subsection{Bayesian inference}
+
+
+
 
 \subsubsection{Ensemble sampler}
 
