--- a/tytiivis.sty
+++ b/tytiivis.sty
@@ -74,7 +74,8 @@
 	% varsinainen sivun muotoilu alkaa
 	\thispagestyle{empty}
 	\begin{minipage}[t][\textheight]{\textwidth}
-	\noindent TURUN YLIOPISTO\\
+	%\noindent TURUN YLIOPISTO\\
+	\noindent University of Turku\\
 	{#1}
 	\begin{list}{}{%
 		\renewcommand{\makelabel}[1]{{##1}\hfil}% muokkasin
